--- a/style.css
+++ b/style.css
@@ -148,13 +148,51 @@ main {
 
 /* This takes care of all the individual boxes */
 .font-box {
-  background-color: #505444;
+  background-color: #46493d;
   border-radius: 4px;
   width: 100%;
   height: 100%;
   cursor: pointer;
+  color: white;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  padding: 1rem;
+}
+
+.font-initials {
+  font-size: 3rem;
+  font-weight: normal;
+  margin-bottom: 0.5rem;
+}
+
+.font-name {
+  font-size: 1.2rem;
+  font-weight: normal;
 }
 
 body {
   background-color: white;
+}
+
+@font-face {
+  font-family: 'Reforma';
+  src: url('./fonts/Reforma1918-Regular.otf') format('opentype');
+}
+
+@font-face {
+  font-family: 'Freight';
+  src: url('./fonts/FreightText-Regular.otf') format('opentype');
+}
+
+@font-face {
+  font-family: 'Tiempos';
+  src: url('./fonts/TiemposText-Regular.otf') format('opentype');
+}
+
+@font-face {
+  font-family: 'Garamond';
+  src: url('./fonts/Garamond.ttf') format('truetype');
 }
