Added background image for start page

--- a/style.css
+++ b/style.css
@@ -11,6 +11,11 @@ body, html {
   font-family: sans-serif;
 }
 
+.start-page {
+  background: url('images/Background.png') no-repeat center center fixed;
+  background-size: cover;
+}
+
 /* Center the "INICIO" button on the index page */
 .centered-button {
   height: 100vh; /* Full screen height */
@@ -171,10 +176,6 @@ main {
 .font-name {
   font-size: 1.2rem;
   font-weight: normal;
-}
-
-body {
-  background-color: white;
 }
 
 @font-face {
